--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -22,9 +22,9 @@ upstream esgf_orp {
 upstream esgf_idp {
     server ${ESGF_IDP_UPSTREAM};
 }
-# upstream esgf_slcs {
-#     server ${ESGF_SLCS_UPSTREAM};
-# }
+upstream esgf_slcs {
+    server ${ESGF_SLCS_UPSTREAM};
+}
 # upstream esgf_auth {
 #     server ${ESGF_AUTH_UPSTREAM};
 # }
@@ -115,9 +115,9 @@ server {
     location /thredds {
         proxy_pass http://esgf_tds;
     }
-#    location /esgf-slcs {
-#        proxy_pass http://esgf_slcs;
-#    }
+    location /esgf-slcs {
+        proxy_pass http://esgf_slcs;
+    }
 #    location /esgf-auth {
 #        proxy_pass http://esgf_auth;
 #    }
