--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -25,9 +25,9 @@ upstream esgf_idp {
 upstream esgf_slcs {
     server ${ESGF_SLCS_UPSTREAM};
 }
-# upstream esgf_auth {
-#     server ${ESGF_AUTH_UPSTREAM};
-# }
+upstream esgf_auth {
+    server ${ESGF_AUTH_UPSTREAM};
+}
 
 
 server {
@@ -118,7 +118,7 @@ server {
     location /esgf-slcs {
         proxy_pass http://esgf_slcs;
     }
-#    location /esgf-auth {
-#        proxy_pass http://esgf_auth;
-#    }
+    location /esgf-auth {
+        proxy_pass http://esgf_auth;
+    }
 }
