Should have been in last commit

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Note that any value defined in the shell takes precedence over values defined in this file.
 
 ZOOKEEPER_VERSION=3.4
-SLCS_POSTGRES_VERSION=10
+POSTGRES_VERSION=10
