Quick start done

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: esgf-docker
+title: ESGF Docker
 description: Documentation for the ESGF Docker project.
 url: "https://cedadev.github.io/esgf-docker"
 baseurl:
