--- a/idp-node/Dockerfile
+++ b/idp-node/Dockerfile
@@ -11,7 +11,12 @@
 ## To get around this, we use a separate build stage with the full JDK to
 ## download and unpack the war, and copy the unpacked folder into the final container.
 
-ARG ESGF_TOMCAT_VERSION=latest
+ARG ESGF_HUB=cedadev
+ARG ESGF_VERSION=latest
+
+# This build stage is required because COPY --from=$ARG is not supported
+# https://github.com/moby/moby/issues/34482
+FROM ${ESGF_HUB}/esgf-configure:${ESGF_VERSION} as configuration
 
 FROM openjdk:8-jdk AS esgf-idp-unpack
 
@@ -28,7 +33,7 @@ RUN mkdir /opt/esgf-idp && \
 ## Stage 2 ##
 #############
 
-FROM cedadev/esgf-tomcat:$ESGF_TOMCAT_VERSION
+FROM ${ESGF_HUB}/esgf-tomcat:$ESGF_VERSION
 
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
@@ -41,8 +46,8 @@ COPY --from=esgf-idp-unpack --chown=tomcat:tomcat /opt/esgf-idp $CATALINA_HOME/w
 RUN chmod -R o-rwx $CATALINA_HOME/webapps/esgf-idp
 
 # Copy configuration and utils from esgf-configure
-COPY --from=cedadev/esgf-configure /esg/config /esg/config
-COPY --from=cedadev/esgf-configure /opt/esgf-docker/scripts/interpolate-configs.sh /tomcat-init.d/
+COPY --from=configuration /esg/config /esg/config
+COPY --from=configuration /opt/esgf-docker/scripts/interpolate-configs.sh /tomcat-init.d/
 
 # Install environment customisations, config files and templates
 COPY scripts/setenv.sh $CATALINA_HOME/bin/
