--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,7 +128,8 @@ services:
     build:
       context: ./orp
       args:
-        ESGF_TOMCAT_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       <<: *config_env
@@ -150,7 +151,8 @@ services:
     build:
       context: ./index-node
       args:
-        ESGF_TOMCAT_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       <<: *config_env
@@ -165,7 +167,8 @@ services:
     build:
       context: ./idp-node
       args:
-        ESGF_TOMCAT_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       <<: *config_env
@@ -181,7 +184,8 @@ services:
     build:
       context: ./tds
       args:
-        ESGF_TOMCAT_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     environment:
       <<: *config_env
       ESGF_TRUSTSTORE_FILE: /esg/certificates/esg-trust-bundle.jks
@@ -204,7 +208,8 @@ services:
     build:
       context: ./cog
       args:
-        ESGF_DJANGO_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       <<: *config_env
@@ -238,7 +243,8 @@ services:
     build:
       context: ./auth
       args:
-        ESGF_DJANGO_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       <<: *config_env
@@ -280,7 +286,8 @@ services:
     build:
       context: ./slcs
       args:
-        ESGF_DJANGO_VERSION: $ESGF_VERSION
+        ESGF_HUB: $ESGF_HUB
+        ESGF_VERSION: $ESGF_VERSION
     restart: always
     environment:
       # Generic Django settings
@@ -301,6 +308,10 @@ services:
       DJANGO_DATABASE_USERDB_PORT: "5432"
       DJANGO_DATABASE_USERDB_USER: dbsuper
       DJANGO_DATABASE_USERDB_PASSWORD_FILE: /esg/secrets/database-password
+      # Make the rootAdmin account a superuser
+      DJANGO_CREATE_SUPERUSER: "1"
+      DJANGO_SUPERUSER_USERNAME: "rootAdmin"
+      DJANGO_SUPERUSER_EMAIL: "CoG@${ESGF_HOSTNAME}"
       # Other SLCS-specific settings
       ESGF_SLCS_URL: "https://${ESGF_HOSTNAME}/esgf-slcs"
       ESGF_SLCS_BASIC_AUTH_REALM: $ESGF_HOSTNAME
